camel-k/2.10.x/installation/registry/special/minikube.md
Camel K

# Configuring registry on Minikube

You can run Camel K integrations on plain Kubernetes using the Minikube cluster creation tool. Follow the instructions in the [official doc](https://github.com/kubernetes/minikube#installation) for the installation.

Start a new instance of Minikube using the command:

```none
minikube start
```

Minikube provides a simple embedded local container registry that it makes the default choice for local development and demo purposes. After the startup process is completed, you need to **enable the `registry` addon**:

```none
minikube addons enable registry
```

Alternatively, you can also start an instance with the `registry` addon in one command:

```none
minikube start --addons registry
```

Once the registry is available, you can check the IP address by typing:

```none
$ kubectl -n kube-system get service registry -o jsonpath='{.spec.clusterIP}'
10.100.107.57
```

Now you can use such value into your IntegrationPlatform:

```yaml
apiVersion: camel.apache.org/v1
kind: IntegrationPlatform
metadata:
  name: camel-k
spec:
  build:
    registry:
      address: 10.100.107.57
      insecure: true
```